--- a/productos.html
+++ b/productos.html
@@ -27,9 +27,7 @@
                 <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  ¡¡Las Mejores Resetas!!
-                </a>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">¡¡Las Mejores Resetas!!</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=YoXm4l1gQPw">Tarta de ricota</a></li>
                   <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=hHQ-EJJkmUw">Tarta de coco</a></li>
@@ -40,8 +38,7 @@
           </div>
         </div>
       </nav>
-      
-<h1 class="pasteleria">Nuestros Productos</h1>
+      <h1 class="pasteleria">Nuestros Productos</h1>
       <div  class="caja1"> 
         <div class="card" style="width: 18rem; margin: 2%;">
           <img src="./Imagenes/tortas nvo.jpg" class="card-img-top" alt="Tortas">
@@ -96,7 +93,6 @@
         </li>
       </ul>
     </footer>
-    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
