--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -41,28 +41,28 @@
         </div>
       </nav>
       <div class="caja1">
-        <div class="card" style="width: 20rem; margin: 2%;">
+        <div class="card" style="width: 20rem; margin: 4%;">
           <img src="./Imagenes/Nueva carpeta/foto nuestra 1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Presentandonos!!</h5>
             <p class="card-text">¡¡Asi nos presentamos y asi somos, libres, humildes, con muchos proyectos, siempre juntos, acompañando y poniendo enfasis en cada detalle de nuetros proyectos!</p>
           </div>
         </div>
-        <div class="card" style="width: 20rem; margin: 2%;">
+        <div class="card" style="width: 20rem; margin: 4%;">
           <img src="./Imagenes/Nueva carpeta/foto nuestra.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">¡¡Disfrutando cada dia!!</h5>
             <p class="card-text">Hacemos de cada dia un nueva oportunidad de salir adelante, de compartir el tiempo en familia y poder cumplir con los objetivos diarios siempre priorizando la union familiar.</p>
           </div>
         </div>
-        <div class="card" style="width: 20rem; margin: 2%;">
+        <div class="card" style="width: 20rem; margin: 4%;">
           <img src="./Imagenes/Nueva carpeta/los tres.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">¡¡Esto es lo que nos mueve y da fuerzas!!</h5>
             <p class="card-text">Este es nuestro primer y mejor proyecto, en el guiamos y aferramos cada instante de nuestros dias, <strong>"Saporito"</strong> comienza con la necesidad de poder emprender algo desde la comodidas de la casa y poder tener el tiempo para estar en familia.. </p>
           </div>
         </div>
-      </div><br><br><br>
+      </div>
       <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
       <footer class="fondo2"> 
        <ul class="nav justify-content-center border 40px">
@@ -80,8 +80,6 @@
          </li>
        </ul>
      </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
