--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </button>
       </div>
       <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
-      <footer class="fondo2">
+      <footer class="fondo2 fixed-bottom">
         <ul class="nav justify-content-center border 40px ">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="https://www.facebook.com/mariana.colgenio"><img src="./Imagenes/logo faceboock.gif" alt="faceboock" width="50px"></a>
