--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,86 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saporito, quienes somos?</title>
-    <link rel="stylesheet" href="saporito.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Saporito, quienes somos?</title>
+  <link rel="stylesheet" href="saporito.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+
 <body class="fondo1">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid fondo2">
-          <a class="navbar-brand" href="./quienes-somos.html"><img src="./Imagenes/logo.png" alt="logo-saporito" width="80px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  ¡¡Las Mejores Resetas!!
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=YoXm4l1gQPw">Tarta de ricota</a></li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=hHQ-EJJkmUw">Tarta de coco</a></li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=WC6WPofXFNs">Tiramisu</a></li>
-                </ul><br>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="caja1">
-        <div class="card" style="width: 20rem; margin: 4%;">
-          <img src="./Imagenes/Nueva carpeta/foto nuestra 1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Presentandonos!!</h5>
-            <p class="card-text">¡¡Asi nos presentamos y asi somos, libres, humildes, con muchos proyectos, siempre juntos, acompañando y poniendo enfasis en cada detalle de nuetros proyectos!</p>
-          </div>
-        </div>
-        <div class="card" style="width: 20rem; margin: 4%;">
-          <img src="./Imagenes/Nueva carpeta/foto nuestra.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">¡¡Disfrutando cada dia!!</h5>
-            <p class="card-text">Hacemos de cada dia un nueva oportunidad de salir adelante, de compartir el tiempo en familia y poder cumplir con los objetivos diarios siempre priorizando la union familiar.</p>
-          </div>
-        </div>
-        <div class="card" style="width: 20rem; margin: 4%;">
-          <img src="./Imagenes/Nueva carpeta/los tres.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">¡¡Esto es lo que nos mueve y da fuerzas!!</h5>
-            <p class="card-text">Este es nuestro primer y mejor proyecto, en el guiamos y aferramos cada instante de nuestros dias, <strong>"Saporito"</strong> comienza con la necesidad de poder emprender algo desde la comodidas de la casa y poder tener el tiempo para estar en familia.. </p>
-          </div>
-        </div>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid fondo2">
+      <a class="navbar-brand" href="./quienes-somos.html"><img src="./Imagenes/logo.png" alt="logo-saporito"
+          width="80px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./productos.html">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              ¡¡Las Mejores Resetas!!
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=YoXm4l1gQPw">Tarta de ricota</a></li>
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=hHQ-EJJkmUw">Tarta de coco</a></li>
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=WC6WPofXFNs">Tiramisu</a></li>
+            </ul><br>
+          </li>
+        </ul>
       </div>
-      <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
-      <footer class="fondo2"> 
-       <ul class="nav justify-content-center border 40px">
-         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="https://www.facebook.com/mariana.colgenio"><img src="./Imagenes/logo faceboock.gif" alt="faceboock" width="50px"></a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="https://wa.me/542995712949"><img src="./Imagenes/logo wathsap.gif" alt="wathsap" width="50px"></a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="https://instagram.com/saporito_pasteleria_neuquen?igshid=YmMyMTA2M2Y="><img src="./Imagenes/instagram definitivo.gif" alt="instagram" width="50px"></a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="https://www.google.com.ar/maps/dir/Gabriel+Forquera+1240,+Neuqu%C3%A9n/''/@-38.9830625,-68.0773382,19z/data=!4m13!4m12!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916"><img src="./Imagenes/logo ubicacion.gif" alt="ubicacion" width="50px"></a>
-         </li>
-       </ul>
-     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    </div>
+  </nav>
+  <div class="caja1">
+    <div class="card" style="width: 20rem; margin: 4%;">
+      <img src="./Imagenes/Nueva carpeta/foto nuestra 1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Presentandonos!!</h5>
+        <p class="card-text">¡¡Asi nos presentamos y asi somos, libres, humildes, con muchos proyectos, siempre juntos,
+          acompañando y poniendo enfasis en cada detalle de nuetros proyectos!</p>
+      </div>
+    </div>
+    <div class="card" style="width: 20rem; margin: 4%;">
+      <img src="./Imagenes/Nueva carpeta/foto nuestra.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">¡¡Disfrutando cada dia!!</h5>
+        <p class="card-text">Hacemos de cada dia un nueva oportunidad de salir adelante, de compartir el tiempo en
+          familia y poder cumplir con los objetivos diarios siempre priorizando la union familiar.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 20rem; margin: 4%;">
+      <img src="./Imagenes/Nueva carpeta/los tres.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">¡¡Esto es lo que nos mueve y da fuerzas!!</h5>
+        <p class="card-text">Este es nuestro primer y mejor proyecto, en el guiamos y aferramos cada instante de
+          nuestros dias, <strong>"Saporito"</strong> comienza con la necesidad de poder emprender algo desde la
+          comodidas de la casa y poder tener el tiempo para estar en familia.. </p>
+      </div>
+    </div>
+  </div>
+  <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
+  <footer class="fondo2">
+    <ul class="nav justify-content-center border 40px">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="https://www.facebook.com/mariana.colgenio"><img
+            src="./Imagenes/logo faceboock.gif" alt="faceboock" width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://wa.me/542995712949"><img src="./Imagenes/logo wathsap.gif" alt="wathsap"
+            width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://instagram.com/saporito_pasteleria_neuquen?igshid=YmMyMTA2M2Y="><img
+            src="./Imagenes/instagram definitivo.gif" alt="instagram" width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+          href="https://www.google.com.ar/maps/dir/Gabriel+Forquera+1240,+Neuqu%C3%A9n/''/@-38.9830625,-68.0773382,19z/data=!4m13!4m12!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916"><img
+            src="./Imagenes/logo ubicacion.gif" alt="ubicacion" width="50px"></a>
+      </li>
+    </ul>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+    integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
