--- a/productos.html
+++ b/productos.html
@@ -1,99 +1,123 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos Saporito</title>
-    <link rel="stylesheet" href="saporito.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Productos Saporito</title>
+  <link rel="stylesheet" href="saporito.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+
 <body class="fondo1">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid fondo2">
-          <a class="navbar-brand" href="./quienes-somos.html"><img src="./Imagenes/logo.png" alt="logo-saporito" width="80px"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">¡¡Las Mejores Resetas!!</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=YoXm4l1gQPw">Tarta de ricota</a></li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=hHQ-EJJkmUw">Tarta de coco</a></li>
-                  <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=WC6WPofXFNs">Tiramisu</a></li>
-                </ul><br>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <h1 class="pasteleria">Nuestros Productos</h1>
-      <div  class="caja1"> 
-        <div class="card" style="width: 18rem; margin: 2%;">
-          <img src="./Imagenes/tortas nvo.jpg" class="card-img-top" alt="Tortas">
-          <div class="card-body">
-            <h5 class="card-title">Tortas</h5>
-            <p class="card-text">Realizamos tortas a pedido con 48hs de anticipacion, los sabores, colores, texturas, y rellenos pueden variar segun la necesidad del cliente.</p>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem; margin: 2%">
-          <img src="./Imagenes/Nueva carpeta/tartas foto.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Tartas</h5>
-            <p class="card-text">Nuestros productos se diferencian del resto por su calidad y frescura, ofrecemos tartas de diferentes sabores y texturas, entre ellas tarta de coco, Ricota, Pasta frola dediferentes variedades, por su sabor y presentacion, seria nuestro caballito de batalla el <strong>Lemon Pie</strong> muy recomendado y pedido por nuestros clientes.</p>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem; margin: 2%">
-          <img src="./Imagenes/Nueva carpeta/alfajores nvo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Alfajores</h5>
-            <p class="card-text">Les ofrecemos una variedad de texturas y sabores diferentes, entre chocolate con castañas, de nuez, marplatense, maicena, frambueza y limon. Los pedidos se deben realizar con una anticipacion de 48hs asegurando calidad y frescura en los productos.</p>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;margin: 2% ">
-          <img src="./Imagenes/Nueva carpeta/tiramisu foto.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Postres</h5>
-            <p class="card-text">Desde tiramisú hasta bombones de chocolate, pasando por chocotortas, arroz con leche, mousse de diferentes sabores, adaptados para que cada encuentro sea diferente.</p>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;margin: 2% ">
-          <img src="./Imagenes/Nueva carpeta/mufins nvo.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Muffins</h5>
-            <p class="card-text">Amplia y variada seleccion de Muffins, con diferentes rellenos y decoraciones, hacen que estos se diferencien del resto, no solo por su vista, sino por su calidad y sabores.</p>
-          </div>
-        </div>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid fondo2">
+      <a class="navbar-brand" href="./quienes-somos.html"><img src="./Imagenes/logo.png" alt="logo-saporito"
+          width="80px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./productos.html">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./quienes-somos.html">Quienes somos</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">¡¡Las Mejores Resetas!!</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=YoXm4l1gQPw">Tarta de ricota</a></li>
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=hHQ-EJJkmUw">Tarta de coco</a></li>
+              <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=WC6WPofXFNs">Tiramisu</a></li>
+            </ul><br>
+          </li>
+        </ul>
       </div>
-      <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
-    <footer class="fondo2">
-      <ul class="nav justify-content-center border 40px ">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/mariana.colgenio"><img src="./Imagenes/logo faceboock.gif" alt="faceboock" width="50px"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://wa.me/542995712949"><img src="./Imagenes/logo wathsap.gif" alt="wathsap" width="50px"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://instagram.com/saporito_pasteleria_neuquen?igshid=YmMyMTA2M2Y="><img src="./Imagenes/instagram definitivo.gif" alt="instagram" width="50px"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.google.com.ar/maps/dir/Gabriel+Forquera+1240,+Neuqu%C3%A9n/''/@-38.9830625,-68.0773382,19z/data=!4m13!4m12!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916"><img src="./Imagenes/logo ubicacion.gif" alt="ubicacion" width="50px"></a>
-        </li>
-      </ul>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    </div>
+  </nav>
+  <h1 class="pasteleria">Nuestros Productos</h1>
+  <div class="caja1">
+    <div class="card" style="width: 18rem; margin: 2%;">
+      <img src="./Imagenes/tortas nvo.jpg" class="card-img-top" alt="Tortas">
+      <div class="card-body">
+        <h5 class="card-title">Tortas</h5>
+        <p class="card-text">Realizamos tortas a pedido con 48hs de anticipacion, los sabores, colores, texturas, y
+          rellenos pueden variar segun la necesidad del cliente.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem; margin: 2%">
+      <img src="./Imagenes/Nueva carpeta/tartas foto.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Tartas</h5>
+        <p class="card-text">Nuestros productos se diferencian del resto por su calidad y frescura, ofrecemos tartas de
+          diferentes sabores y texturas, entre ellas tarta de coco, Ricota, Pasta frola dediferentes variedades, por su
+          sabor y presentacion, seria nuestro caballito de batalla el <strong>Lemon Pie</strong> muy recomendado y
+          pedido por nuestros clientes.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem; margin: 2%">
+      <img src="./Imagenes/Nueva carpeta/alfajores nvo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Alfajores</h5>
+        <p class="card-text">Les ofrecemos una variedad de texturas y sabores diferentes, entre chocolate con castañas,
+          de nuez, marplatense, maicena, frambueza y limon. Los pedidos se deben realizar con una anticipacion de 48hs
+          asegurando calidad y frescura en los productos.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;margin: 2% ">
+      <img src="./Imagenes/Nueva carpeta/tiramisu foto.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Postres</h5>
+        <p class="card-text">Desde tiramisú hasta bombones de chocolate, pasando por chocotortas, arroz con leche,
+          mousse de diferentes sabores, adaptados para que cada encuentro sea diferente.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;margin: 2% ">
+      <img src="./Imagenes/Nueva carpeta/mufins nvo.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Muffins</h5>
+        <p class="card-text">Amplia y variada seleccion de Muffins, con diferentes rellenos y decoraciones, hacen que
+          estos se diferencien del resto, no solo por su vista, sino por su calidad y sabores.</p>
+      </div>
+    </div>
+  </div>
+  <h2 class="contacto"> CONTACTATE CON NOSOTROS DE DIFERENTES FORMAS HACIENDO CLICK EN NUESTROS ENLACES...!!</h2>
+  <footer class="fondo2">
+    <ul class="nav justify-content-center border 40px ">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="https://www.facebook.com/mariana.colgenio"><img
+            src="./Imagenes/logo faceboock.gif" alt="faceboock" width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://wa.me/542995712949"><img src="./Imagenes/logo wathsap.gif" alt="wathsap"
+            width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://instagram.com/saporito_pasteleria_neuquen?igshid=YmMyMTA2M2Y="><img
+            src="./Imagenes/instagram definitivo.gif" alt="instagram" width="50px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+          href="https://www.google.com.ar/maps/dir/Gabriel+Forquera+1240,+Neuqu%C3%A9n/''/@-38.9830625,-68.0773382,19z/data=!4m13!4m12!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916!1m5!1m1!1s0x960a326a19fb0d59:0xf597ed16cbb7a676!2m2!1d-68.0768442!2d-38.9830916"><img
+            src="./Imagenes/logo ubicacion.gif" alt="ubicacion" width="50px"></a>
+      </li>
+    </ul>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+    integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
